styles/extre-small-screen-styles.css
@media only screen and (min-width: 360px) and (max-width: 576px){
    .header-items-container {
        width: 100vw;
        height: 80px;
        padding: 10px 10px;
        box-shadow: 0 3px 6px 0 rgb(0 0 0 / 5%);
    }
    .header-items {
        width: 100%;
        height: 100%;
        padding: 10px 10px;
        display: grid;
        grid-template: 1fr / 1fr 2fr 1fr;
        justify-content: space-between;
    }
    .portfolio-text {
        display: flex;
        justify-content: center;
        align-items: center;
        font-family: 'Work Sans', sans-serif;
        font-size: 1.5rem;
        font-weight: 500;
        letter-spacing: 1px;
        color: rgba(3, 31, 81, 0.981);
    }
    .portfolio-text span {
        color: rgb(253, 106, 106);
    }
    .header-items{
        display: flex;
        flex-direction: row;
    }
    .nav-links {
        display: none;
        justify-content: space-evenly;
        align-items: center;
        color: rgba(3, 31, 81, 0.981);
    }
    .nav-btns {
        display: flex;
        justify-content: space-between;
        align-items: center;
        gap: 20px;
        width: auto;
    }
    .link-styles {
        font-size: 1.3vw;
        letter-spacing: 0.5px;
    }
    .fa {
        color: rgba(3, 31, 81, 0.981);
        font-size: 20px;
    }
    .menu-btn-holder {
        display: flex;
        height: 100%;
        width: auto;
        justify-content: center;
        align-items: center;
    }
    .fa-bars {
        font-size: 1.5rem;
        display: inline-block;
    }
    .banner-section {
        width: 100vw;
        height: calc( 100vh - 80px);
        z-index: 0;
        padding: 10px;
    }
    .hero-items-container {
        width: 100%;
        height: 100%;
        display: grid;
        grid-template: 9fr 1fr / 1fr;
        padding: 10px;
        row-gap: 10px;
    }
    .about-section {
        width: calc(100vw - 40px);
        height: 100%;
        padding: 10px;
        row-gap: 10px;
        display: flex;
        flex-direction: column;
    }
    .about-section span {
        font-size: 0.5rem;
    }
    .social-media-link-holder {
        width: calc( 100vw - 40px);
        height: 100%;
        padding: 10px;
        display: flex;
        align-items: center;
        justify-content: center;
    }
    .follow-social ul{
        align-items: center;
        justify-content: center;
        row-gap: 10px;
    }
    .follow-social {
        display: flex;
        justify-content: space-evenly;
        align-items: center;
        width: 100%;
        height: 100%;
    }
    .my-fa {
        font-size: 30px;
    }
    .about-content {
        width: 100%;
        height: 50%;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        gap: 10px;
    }
    .about-content span {
        font-size: 18px;
    }
    .image-holder {
        width: 100%;
        height: 50%;
        padding: 10px;
        display: flex;
        align-items: center;
        justify-content: center;
    }
    .image-holder img {
        width: 80%;
        height: auto;
    }
    .content-text {
        font-family: 'Libre Baskerville',serif;
        font-size: 25px;
        color: rgba(3, 31, 81, 0.981);
        text-align: center;
    }
    .content-discription {
        color: rgba(19, 47, 96, 0.981); 
        font-size: 15px;
        text-align: center;
        font-family: 'Work Sans', sans-serif;
        padding: 15px;
    }
    .services-section {
        width: 100vw;
        height: calc(100vh - 80px);
        background-color: var(--bg-lightgrey);
        padding: 10px 10px;
    }
    .service-section-content-holder {
        width: 100%;
        height: 100%;
        padding: 10px 10px;
        display: grid;
        grid-template: 1fr / 1fr;
    }
    .my-services-text-container {
        padding: 10px;
        display: grid;
        grid-template:  repeat(6, auto) / 1fr;
    }
    .my-image-container {
        display: none;
        align-items: center;
        justify-content: flex-end;
        padding: 100px 0 100px 100px;

    }
    .service-heading-text {
        font-size: 12px;
        color: var(--primary-color);
        font-weight: 400;
        display: block;
        margin-bottom: 15px;
    }
    .service-sub-heading-text {
        font-size: 1.8rem;
        font-weight: 900;
        position: relative;
        font-family: 'Libre Baskerville', serif;
        color: var(--heading-color);
    }
    .service-discription {
        font-size: 12px;
    }
    .service-footer {
        font-size: 11px;
        font-weight: 400;
    }
    .list-of-my-skills {
        display: flex;
        flex-direction: column;
        gap: 5px;
    }
    .list-of-my-skills li {
        font-size: 11px;
        font-weight: 500;
        color:  rgba(3, 31, 81, 0.981);
    }
    .list-of-my-skills li:hover {
        color: var(--primary-color);
        transition-duration: 1.5s;
        cursor: pointer;
    }
    .service-section-image {
        min-width: 250px;
        width: 250px;
        max-width: 250px;
        height: 300px;
        border-radius: 5px;
    }

}

